--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="/favicon/favicon-32x32.png">
-    <link rel="stylesheet" href="/css/styleHome.css"/>
+    <link rel="icon" href="favicon/favicon-32x32.png">
+    <link rel="stylesheet" href="css/styleHome.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <title>Juhi Pant | Personal Portfolio</title>
 </head>
@@ -15,7 +15,7 @@
         <!--First Half of Nav Bar-->
         <div class="left-nav">
         <div class="jp-logo">
-            <img src="/favicon/android-chrome-192x192.png" alt="" class="jp-logo">
+            <img src="favicon/android-chrome-192x192.png" alt="" class="jp-logo">
         </div>
 
         <div class="search-box">
@@ -52,13 +52,13 @@
         </div>
 
         <div class="icon">
-            <div><img src="/images/4e6be686-ad77-4211-9269-85828cd74a24WhatsApp Image 2024-01-06 at 13.11.39_d7097eaf.PNG" alt="" class="jp-img"></div>
+            <div><img src="images/4e6be686-ad77-4211-9269-85828cd74a24WhatsApp Image 2024-01-06 at 13.11.39_d7097eaf.PNG" alt="" class="jp-img"></div>
             <div style="position: relative; bottom: 4px;">Me <i class="fa-solid fa-caret-down" style="color: #666a70;" class="dropbtn" id="myDropdown"  onclick="showMenu()"></i></div>
             <div class="menu">
                 <div class="menu-content">
                     <div class="menudiv1">
                         <div>
-                            <img src="/images/WhatsApp Image 2024-01-06 at 13.11.39_d7097eaf.jpg" alt="">
+                            <img src="images/WhatsApp Image 2024-01-06 at 13.11.39_d7097eaf.jpg" alt="">
                             <div>Juhi Pant</div>
                         </div>
                     </div>
@@ -94,7 +94,7 @@
            </div>
 
            <div class="box-2">
-            <img src="/images/4e6be686-ad77-4211-9269-85828cd74a24WhatsApp Image 2024-01-06 at 13.11.39_d7097eaf.PNG" alt="">
+            <img src="images/4e6be686-ad77-4211-9269-85828cd74a24WhatsApp Image 2024-01-06 at 13.11.39_d7097eaf.PNG" alt="">
             <div class="name">
             <h2>Juhi Pant</h2>
             <h3>(She/Her)</h3>
@@ -128,62 +128,62 @@
                     <div class="card-wrapper">
                         <div class="card">
                             <div class="image">
-                                <img src="/images/html.png" alt="">
+                                <img src="images/html.png" alt="">
                             </div>
                         </div>
                         <div class="card swiper-slide">
                             <div class="image">
-                                <img src="/images/css-3.png" alt="">
+                                <img src="images/css-3.png" alt="">
                             </div>
                         </div>
                         <div class="card swiper-slide">
                             <div class="image">
-                                <img src="/images/bootstrap.png" alt="">
+                                <img src="images/bootstrap.png" alt="">
                             </div>
                         </div>
                         <div class="card swiper-slide">
                             <div class="image">
-                                <img src="/images/tailwind-css-icon.png" alt="">
+                                <img src="images/tailwind-css-icon.png" alt="">
                             </div>
                         </div>
                         <div class="card swiper-slide">
                             <div class="image">
-                                <img src="/images/java-script.png" alt="">
+                                <img src="images/java-script.png" alt="">
                             </div>
                         </div>
                         <div class="card swiper-slide">
                             <div class="image">
-                                <img src="/images/physics.png" alt="">
+                                <img src="images/physics.png" alt="">
                             </div>
                         </div>
                         <div class="card swiper-slide">
                             <div class="image">
-                                <img src="/images/nodejs.png" alt="">
+                                <img src="images/nodejs.png" alt="">
                             </div>
                         </div>
                         <div class="card swiper-slide">
                             <div class="image">
-                                <img src="/images/icons8-express-js-500.png" alt="">
+                                <img src="images/icons8-express-js-500.png" alt="">
                             </div>
                         </div>
                         <div class="card swiper-slide">
                             <div class="image">
-                                <img src="/images/api.png" alt="">
+                                <img src="images/api.png" alt="">
                             </div>
                         </div>
                         <div class="card swiper-slide">
                             <div class="image">
-                                <img src="/images/pngwing.com.png" alt="">
+                                <img src="images/pngwing.com.png" alt="">
                             </div>
                         </div>
                         <div class="card swiper-slide">
                             <div class="image">
-                                <img src="/images/git.png" alt="">
+                                <img src="images/git.png" alt="">
                             </div>
                         </div>
                         <div class="card swiper-slide">
                             <div class="image">
-                                <img src="/images/github.png" alt="">
+                                <img src="images/github.png" alt="">
                             </div>
                         </div>
 
@@ -203,6 +203,6 @@
 
 
 <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
-<script src="/js/home.js"></script>
+<script src="js/home.js"></script>
 </body>
 </html>
